--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,11 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+	<dependency>
+                        <groupId>mysql</groupId>
+                        <artifactId>mysql-connector-java</artifactId>
+                        <version>8.0.26</version>
+                </dependency>
 
 	<build>
 		<plugins>
