--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 
+#spring.profiles.active = dev
+spring.datasource.url=jdbc:mysql://root:awD1BRiqbOrIwofDpbCI@containers-us-west-56.railway.app:5903/railway
+spring.datasource.username=root
+spring.datasource.password=awD1BRiqbOrIwofDpbCI
+
+# Hibernate2
+#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
